# era

./: CMakeLists.txt  package.xml
include/era/: blackboard.h  buffer.h  component.h  engine.h  plugin.h  types.h
include/era/math/: matrix.h
src/: blackboard.cpp  engine.cpp
test/: test.cpp
